format as cond_split().

*****

Added documentation to next_char() and last_char().
Caught special case when the input string has only blank characters
(return zero).


*****  Sun Dec 23 10:00:15 CLT 2018  *****

Cleaned up many of the docstrings.
Prepended 'r' to docstrings where I need to escape chars.
There are still many functions that need a proper example (wait until
we have the project structured as a package, and integration tests
and examples).

*****

Implemented ordinal() function to compute ordinal representation
of numbers.

*****

Implemented display_bibs() function to show color-syntax bib
entries on screen.
Updated remove_duplicates(), filter_fields(), and merge() to use
display_bibs().

*****

Some minor clean up.

*****

Bumped bibmanager version to 0.1.0.
This next merge closes #1


*****  Mon Dec 24 15:28:54 CLT 2018  *****

Initiated latex management file (latex_manager.py):
Implemented no_comments() to remove comments from latex text.
Implemented citations() to extract citation keys from latex text.

*****

Proposed project/file structure:
utils.py          Utilities
bib_manager.py    BibTeX/database management
latex_manager.py  LaTeX management
ads_manager.py    ADS I/O management
cli_manager.py    Command-line-interface management

*****

Implemented build_bib() function which generates a bib file
from an imput tex file.

*****

Renamed bibm.py to bib_manager.py.
Fixed typo in buid_bib() output file.

*****

Bumped bibmanager version to 0.2.0.
This next merge closes #2


*****  Tue Dec 25 16:36:54 CLT 2018  *****

Added the bibmanager __init__.py file (placeholder mostly,
not much going on there).
Added setup.py file.

*****

Drafted the command-line interface (main command calls).
(just the facade, still need to document and link the commands to
the bibmanager calls).
This is implemented in the __main__.py file.

*****

Cleaned up bib_manager.py, added __all__ list of functions.

*****
