@@ -1,10 +1,13 @@
 # Copyright (c) 2018 Patricio Cubillos and contributors.
 # bibmanager is open-source software under the MIT license (see LICENSE).
 
-__all__ = []
-
 import os
 from . import VERSION as ver
+from .bib_manager import *
+
+from .bib_manager import __all__ as bm_all
+
+__all__ = bm_all
 
 __version__ = "{:d}.{:d}.{:d}".format(ver.BM_VER, ver.BM_MIN, ver.BM_REV)
 
